Follow up to <https://bugs.webkit.org/show_bug.cgi?id=33635>.

Reviewed by Adam Roben.

Now that dropEffect and effectAllowed are guaranteed to not be
null, change null checks into asserts to make sure we are returning
a proper DragOperation value.

* dom/Clipboard.cpp:
(WebCore::Clipboard::sourceOperation): Change null check to assert.
(WebCore::Clipboard::destinationOperation): Ditto.



Canonical link: https://commits.webkit.org/44693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53288 268f45cc-cd09-0410-ab3c-d52691b4dbfc